# ethical-hacking-apps

./: .gitignore
.github/workflows/: ci.yml
ai/: README.md  pyproject.toml  requirements.txt
ai/agents/: README.md  mcp_client.py  mcp_server.py
ai/iris/: iris.py
ai/tests/: test_mcp_client_live.py
binary/: README.md  build.sh  main.cpp
rest-api/: README.md  a.py  auth_utils.py  b.py  downloads.py  g.py  j.py  main.py  pyproject.toml  requirements.txt  storage_utils.py  test_security_b.py  u.py  uploads.py
rest-api/TEST/: test_vulnerabilities.py
